--- a/package.json
+++ b/package.json
@@ -21,6 +21,7 @@
     "@radix-ui/react-dropdown-menu": "^2.1.1",
     "@radix-ui/react-icons": "^1.3.0",
     "@radix-ui/react-label": "^2.0.2",
+    "@radix-ui/react-popover": "^1.1.1",
     "@radix-ui/react-progress": "^1.1.0",
     "@radix-ui/react-separator": "^1.1.0",
     "@radix-ui/react-slot": "^1.0.2",
@@ -33,18 +34,22 @@
     "@vercel/postgres": "^0.8.0",
     "class-variance-authority": "^0.7.0",
     "clsx": "^2.1.1",
+    "date-fns": "^3.6.0",
     "drizzle-orm": "^0.30.10",
     "geist": "^1.3.0",
     "lucide-react": "^0.396.0",
     "next": "^14.2.1",
     "next-themes": "^0.3.0",
+    "node-html-parser": "^6.1.13",
     "postgres": "^3.4.4",
     "posthog-js": "^1.139.2",
     "posthog-node": "^4.0.1",
     "react": "^18.3.0",
+    "react-day-picker": "8.10.1",
     "react-dom": "^18.3.0",
     "server-only": "^0.0.1",
     "sonner": "^1.5.0",
+    "swr": "^2.2.5",
     "tailwind-merge": "^2.3.0",
     "tailwindcss-animate": "^1.0.7",
     "zod": "^3.23.3"
